@@ -43,7 +43,7 @@ public class ThreadBucketSelectionStrategy implements BucketSelectionStrategy {
 
   @Override
   public int getBucketIdByRecord(final Document record, final boolean async) {
-    return (int) (Thread.currentThread().getId() % total);
+    return (int) (Thread.currentThread().threadId() % total);
   }
 
   @Override
