@@ -52,7 +52,7 @@ public class LSMTreeIndexCompactor {
     LogManager.instance()
         .log(mainIndex, Level.INFO, "Compacting index '%s' (pages=%d pageSize=%d threadId=%d)...", null, mutableIndex, totalPages,
             mutableIndex.getPageSize(),
-            Thread.currentThread().getId());
+            Thread.currentThread().threadId());
 
     if (totalPages < 2)
       return false;
@@ -67,7 +67,7 @@ public class LSMTreeIndexCompactor {
       LogManager.instance()
           .log(mainIndex, Level.WARNING, "- Creating sub-index '%s' with fileId=%d (threadId=%d)...", null, compactedIndex,
               compactedIndex.getFileId(),
-              Thread.currentThread().getId());
+              Thread.currentThread().threadId());
     }
 
     final byte[] keyTypes = mutableIndex.getBinaryKeyTypes();
@@ -111,7 +111,7 @@ public class LSMTreeIndexCompactor {
     }
 
     LogManager.instance().log(mainIndex, Level.WARNING, "- Compacting pages 0-%d (threadId=%d)", null, lastImmutablePage,
-        Thread.currentThread().getId());
+        Thread.currentThread().threadId());
 
     for (int pageIndex = 0; pageIndex <= lastImmutablePage; ) {
       final long totalRAMNeeded = (lastImmutablePage - pageIndex + 1L) * mutableIndex.getPageSize();
@@ -122,7 +122,7 @@ public class LSMTreeIndexCompactor {
             .log(mainIndex, Level.WARNING, "- Creating partial index with %d pages by using %s (totalRAMNeeded=%s, threadId=%d)",
                 null, pagesToCompact,
                 FileUtils.getSizeAsString(indexCompactionRAM), FileUtils.getSizeAsString(totalRAMNeeded),
-                Thread.currentThread().getId());
+                Thread.currentThread().threadId());
       } else
         pagesToCompact = lastImmutablePage - pageIndex + 1;
 
@@ -134,7 +134,7 @@ public class LSMTreeIndexCompactor {
       LogManager.instance()
           .log(mainIndex, Level.WARNING, "- This turn compacting %d pages using root page %s v.%d (threadId=%d)", null,
               pagesToCompact, rootPage.getPageId(),
-              rootPage.getVersion(), Thread.currentThread().getId());
+              rootPage.getVersion(), Thread.currentThread().threadId());
 
       int compactedPageNumberInSeries = 1;
 
@@ -257,7 +257,7 @@ public class LSMTreeIndexCompactor {
               LogManager.instance()
                   .log(mainIndex, Level.WARNING,
                       "- Creating a new entry in index '%s' root page %s->%d (entry in page=%d threadId=%d)", null, mutableIndex,
-                      Arrays.toString(minorKey), newPageNum, mutableIndex.getCount(rootPage) - 1, Thread.currentThread().getId());
+                      Arrays.toString(minorKey), newPageNum, mutableIndex.getCount(rootPage) - 1, Thread.currentThread().threadId());
 
               if (newRootPage != rootPage) {
                 throw new UnsupportedOperationException("Root index page overflow");
@@ -288,7 +288,7 @@ public class LSMTreeIndexCompactor {
             LogManager.instance()
                 .log(mainIndex, Level.WARNING, "- Keys %d values %d - iterations %d (entriesInRootPage=%d, threadId=%d)", null,
                     totalKeys, totalValues,
-                    iterations, compactedIndex.getCount(rootPage), Thread.currentThread().getId());
+                    iterations, compactedIndex.getCount(rootPage), Thread.currentThread().threadId());
         }
       }
 
@@ -300,7 +300,7 @@ public class LSMTreeIndexCompactor {
         LogManager.instance()
             .log(mainIndex, Level.WARNING, "- Creating last entry in index '%s' root page %s (entriesInRootPage=%d, threadId=%d)",
                 null, mutableIndex,
-                Arrays.toString(lastPageMaxKey), compactedIndex.getCount(rootPage), Thread.currentThread().getId());
+                Arrays.toString(lastPageMaxKey), compactedIndex.getCount(rootPage), Thread.currentThread().threadId());
       }
 
       final List<MutablePage> modifiedPages = new ArrayList<>(1);
@@ -318,7 +318,7 @@ public class LSMTreeIndexCompactor {
           "- compacted %d pages, remaining %d pages (totalKeys=%d totalValues=%d totalMergedKeys=%d totalMergedValues=%d, threadId=%d)",
           null, compactedPages,
           (lastImmutablePage - compactedPages + 1), totalKeys, totalValues, totalMergedKeys, totalMergedValues,
-          Thread.currentThread().getId());
+          Thread.currentThread().threadId());
 
       pageIndex += pagesToCompact;
     }
@@ -333,7 +333,7 @@ public class LSMTreeIndexCompactor {
         compactedIndex.getTotalPages(),
         iterations, oldMutableFileName, oldMutableFileId, mainIndex.getMutableIndex().getName(),
         mainIndex.getMutableIndex().getFileId(),
-        compactedIndex.getName(), compactedIndex.getFileId(), Thread.currentThread().getId()));
+        compactedIndex.getName(), compactedIndex.getFileId(), Thread.currentThread().threadId()));
 
     if (debug) {
       System.out.println("AFTER COMPACTING:");
